--- a/kr/styles.css
+++ b/kr/styles.css
@@ -1,11 +1,11 @@
 .block1{
-  backgroun-color:pink;
+  background-color:pink;
 }
 .block2{
-  backgroun-color:blue;
+  background-color:blue;
 }
 .block3{
-  backgroun-color:yellow;
+  background-color:yellow;
 }
 .block4{
   background-color:green;
