--- a/kr/styles.css
+++ b/kr/styles.css
@@ -11,6 +11,20 @@
   background-color:green;
 }
 .h4{
-  width:150px;
+  width:110px;
+}
+.h4-1{
+  background-color: 00FF7F;
+}
+.h4-2{
   background-color:red;
 }
+.h4-3{
+  background-color:#808000;
+}
+.h4-4{
+  background-color:pink;
+}
+
+
+
