--- a/kntr/styles.css
+++ b/kntr/styles.css
@@ -20,7 +20,7 @@ h4{
   position:absolute;
   bottom:0;
   left:0;
-  color:#F08080;
+  color:#2F4F4F;
   font-size:120%;
 }
 .block1, .block2, .block3, .block4{
