--- a/kntr/styles.css
+++ b/kntr/styles.css
@@ -1,18 +1,18 @@
 .block1{
   background-color:#E6E6FA;
-  color:#87CEFA;
+  color:#2F4F4F;
 }
 .block2{
   background-color:#D8BFD8;
-  color:#87CEEB;
+  color:#8#B22222;
 }
 .block3{
   background-color:#DDA0DD;
-  color:#ADD8E6;
+  color:##008080;
 }
 .block4{
   background-color:#DA70D6;
-  color:#AFEEEE
+  color:#191970;
 }
 h4{
   background-color:#008B8B;
