--- a/kntr/styles.css
+++ b/kntr/styles.css
@@ -4,11 +4,11 @@
 }
 .block2{
   background-color:#D8BFD8;
-  color:#8#B22222;
+  color:#B22222;
 }
 .block3{
   background-color:#DDA0DD;
-  color:##008080;
+  color:#483D8B;
 }
 .block4{
   background-color:#DA70D6;
