--- a/kntr/styles.css
+++ b/kntr/styles.css
@@ -22,7 +22,12 @@ h4{
   left:0;
   color:#DEB887;
   font-size:120%;
+  font-family: 'Silkscreen', sans-serif;
 }
 .block1, .block2, .block3, .block4{
   position: relative;
+  font-family: 'Lobster Two', sans-serif;
 }
+h1, h2, h3{
+  font-family: 'Kalnia', serif;
+  Ї
