--- a/kntr/styles.css
+++ b/kntr/styles.css
@@ -1,3 +1,38 @@
+  @media (max-width: 768px) {
+    .container{
+       display: flex;
+      flex-direction:column;
+      
+    }
+    }
+  
+@media (min-width: 769px) and (max-width: 992px) {
+  .container{
+    flex-wrap: wrap;
+  }
+    .block1, .block2, .block3, .block4{
+      width:50%;
+    }
+}
+  @media (min-width: 993px) and (max-width: 1200px) {
+  .container{
+    flex-wrap: wrap;
+  }
+    .block1, .block2, .block3{
+       flex-direction: row;
+    }
+    .block4{
+      width:100%;
+    }
+  }
+ @media (min-width: 1201px) {
+  .container{
+     flex-direction: row;
+  }
+   
+    
+
+    
 .block1{
   background-color:#E6E6FA;
   color:#2F4F4F;
