--- a/kntr/styles.css
+++ b/kntr/styles.css
@@ -33,30 +33,48 @@ h4{
 h1, h2, h3{
   font-family: 'Kalnia', serif;
 }
-    @media (max-width: 768px) {
-     .block1, .block2, .block3, .block4{
-       display: flex;
-      flex-direction:column;
-      
+     @media (max-width: 768px) {
+      .block1,
+      .block2,
+      .block3,
+      .block4 {
+        display: block;
+        width: 100%;
+      }
     }
+
+    @media (min-width: 769px) and (max-width: 992px) {
+      .block1,
+      .block2,
+      .block3,
+      .block4 {
+        width: 50%;
+      }
     }
-  
-@media (min-width: 769px) and (max-width: 992px) {
-    .block1, .block2, .block3, .block4{
-      width:50%;
+
+    @media (min-width: 993px) and (max-width: 1200px) {
+      .block1,
+      .block2,
+      .block3 {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap; 
+        width: 50%;
+      }
+      .block4 {
+        width: 100%;
+      }
     }
-}
-  @media (min-width: 993px) and (max-width: 1200px) {
-    .block1, .block2, .block3{
-       flex-direction: row;
+
+    @media (min-width: 1201px) {
+      .block1,
+      .block2,
+      .block3,
+      .block4 {
+        display: flex;
+        flex-direction: row;
+        width: 25%;
+       
+      }
     }
-    .block4{
-      width:100%;
-    }
-  }
- @media (min-width: 1201px) {
-   .block1, .block2, .block3, .block4{
-     flex-direction: row;
-  }
- }
    
