--- a/kntr/styles.css
+++ b/kntr/styles.css
@@ -35,7 +35,8 @@ h1, h2, h3{
 }
      @media (max-width: 768px) {
       .container {
-        display: block;
+        display: flex;
+        flex-wrap: wrap; 
         width: 100%;
       }
     }
@@ -51,7 +52,7 @@ h1, h2, h3{
       .block2,
       .block3 {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         flex-wrap: wrap; 
         width: 50%;
       }
